--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,90 +1,90 @@
 # ============================================
-# Docker Compose 配置文件
-# 用于本地开发和测试环境
+# Docker Compose Configuration File
+# For local development and testing environment
 # ============================================
 
 services:
   # ----------------------------------------
-  # PostgreSQL 数据库服务
+  # PostgreSQL Database Service
   # ----------------------------------------
   postgres:
     image: postgres:16-alpine
     container_name: doordash-postgres
     
-    # 环境变量配置
+    # Environment variable configuration
     environment:
-      POSTGRES_DB: doordash_db          # 数据库名
-      POSTGRES_USER: postgres            # 用户名
-      POSTGRES_PASSWORD: postgres123     # 密码（生产环境使用secrets）
+      POSTGRES_DB: doordash_db          # Database name
+      POSTGRES_USER: postgres            # Username
+      POSTGRES_PASSWORD: postgres123     # Password (use secrets in production)
       PGDATA: /var/lib/postgresql/data/pgdata
     
-    # 端口映射：宿主机端口:容器端口
+    # Port mapping: host_port:container_port
     ports:
       - "5432:5432"
     
-    # 数据持久化：将数据保存到本地，容器删除后数据不丢失
+    # Data persistence: save data locally, data persists after container deletion
     volumes:
       - postgres_data:/var/lib/postgresql/data
     
-    # 健康检查
+    # Health check
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
       timeout: 5s
       retries: 5
     
-    # 容器重启策略
+    # Container restart policy
     restart: unless-stopped
     
-    # 使用自定义网络
+    # Use custom network
     networks:
       - doordash-network
 
   # ----------------------------------------
-  # Spring Boot 应用服务
+  # Spring Boot Application Service
   # ----------------------------------------
   app:
     build:
-      context: .                         # Dockerfile所在目录
+      context: .                         # Dockerfile location
       dockerfile: Dockerfile
     
     container_name: doordash-app
     
-    # 依赖关系：等待postgres启动后再启动应用
+    # Dependency: wait for postgres to start before starting the app
     depends_on:
       postgres:
         condition: service_healthy
     
-    # 环境变量：覆盖application.yml中的配置
+    # Environment variables: override configuration in application.yml
     environment:
-      # 数据库连接配置
+      # Database connection configuration
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/doordash_db
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: postgres123
       
-      # JPA配置
+      # JPA configuration
       SPRING_JPA_HIBERNATE_DDL_AUTO: update
       SPRING_JPA_SHOW_SQL: "true"
       
-      # 应用配置
+      # Application configuration
       SERVER_PORT: 8080
       
-      # JWT配置（建议使用环境变量而非配置文件）
+      # JWT configuration (recommended to use environment variables instead of config files)
       JWT_SECRET: dev-secret-key-change-in-production-min-256-bits
       JWT_EXPIRATION: 86400000
     
-    # 端口映射
+    # Port mapping
     ports:
       - "8080:8080"
     
-    # 容器重启策略
+    # Container restart policy
     restart: unless-stopped
     
-    # 使用自定义网络
+    # Use custom network
     networks:
       - doordash-network
     
-    # 日志配置
+    # Logging configuration
     logging:
       driver: "json-file"
       options:
@@ -92,7 +92,7 @@ services:
         max-file: "3"
 
   # ----------------------------------------
-  # pgAdmin（可选）- PostgreSQL管理工具
+  # pgAdmin (Optional) - PostgreSQL Management Tool
   # ----------------------------------------
   pgadmin:
     image: dpage/pgadmin4:latest
@@ -115,40 +115,40 @@ services:
     restart: unless-stopped
 
 # ----------------------------------------
-# 数据卷定义
+# Volume Definitions
 # ----------------------------------------
 volumes:
   postgres_data:
     driver: local
 
 # ----------------------------------------
-# 网络定义
+# Network Definitions
 # ----------------------------------------
 networks:
   doordash-network:
     driver: bridge
 
 # ============================================
-# 使用说明:
+# Usage Instructions:
 #
-# 启动所有服务:
+# Start all services:
 #   docker-compose up -d
 #
-# 查看日志:
+# View logs:
 #   docker-compose logs -f
 #   docker-compose logs -f app
 #
-# 停止所有服务:
+# Stop all services:
 #   docker-compose down
 #
-# 停止并删除数据:
+# Stop and remove data:
 #   docker-compose down -v
 #
-# 重新构建应用:
+# Rebuild application:
 #   docker-compose up -d --build
 #
-# 访问地址:
-#   应用: http://localhost:8080/api
+# Access URLs:
+#   Application: http://localhost:8080/api
 #   Swagger: http://localhost:8080/api/swagger-ui.html
 #   pgAdmin: http://localhost:5050
 # ============================================
